welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:47: error: not found: value estfaceMur
		if (!estfaceMur) avance();
                     ^